# pocketsphinx

./: LICENSE  README.md  package.xml
lang_models/: 3140.dic  3140.lm  3140.log_pronounce  3140.sent  3140.vocab  README.md  voice_cmd.txt
launch/: pocketsphinx.launch  pocketsphinx_full.launch
scripts/: lm_test.py  recognizer.py
